@@ -25,7 +25,7 @@ import sleeper.core.record.process.RecordsProcessedSummary;
 import sleeper.core.statestore.FileInfoFactory;
 
 import java.time.Instant;
-import java.util.Collections;
+import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static sleeper.compaction.job.CompactionJobStatusTestData.finishedCompactionRun;
@@ -39,7 +39,7 @@ public class StoreCompactionJobUpdatesIT extends DynamoDBCompactionJobStatusStor
         Partition partition = singlePartition();
         FileInfoFactory fileFactory = fileFactory(partition);
         CompactionJob job = jobFactory.createCompactionJob(
-                Collections.singletonList(fileFactory.leafFile(100L, "a", "z")),
+                List.of(fileFactory.rootFile(100L)),
                 partition.getId());
 
         // When
@@ -58,7 +58,7 @@ public class StoreCompactionJobUpdatesIT extends DynamoDBCompactionJobStatusStor
         Partition partition = singlePartition();
         FileInfoFactory fileFactory = fileFactory(partition);
         CompactionJob job = jobFactory.createCompactionJob(
-                Collections.singletonList(fileFactory.leafFile(100L, "a", "z")),
+                List.of(fileFactory.rootFile(100L)),
                 partition.getId());
 
         // When
@@ -78,7 +78,7 @@ public class StoreCompactionJobUpdatesIT extends DynamoDBCompactionJobStatusStor
         Partition partition = singlePartition();
         FileInfoFactory fileFactory = fileFactory(partition);
         CompactionJob job = jobFactory.createCompactionJob(
-                Collections.singletonList(fileFactory.leafFile(100L, "a", "z")),
+                List.of(fileFactory.rootFile(100L)),
                 partition.getId());
         Instant startTime1 = Instant.parse("2022-10-03T15:19:01.001Z");
         Instant finishTime1 = Instant.parse("2022-10-03T15:19:31.001Z");
